--- a/style/sidebar.css
+++ b/style/sidebar.css
@@ -1,4 +1,4 @@
-@media (min-width: 549px) {
+@media (min-width: 940px) {
   .sidebar {
     position: fixed;
     top: 0;
@@ -63,7 +63,7 @@
   }
 }
 
-@media (max-width: 550px) {
+@media (max-width: 939px) {
   body {
     height: 2000px;
   }
@@ -83,17 +83,19 @@
     object-fit: cover;
     border-radius: 80px;
   }
+
   .name {
     margin-left: 10px;
   }
-  .introduction p {
+  .introduction {
     display: flex;
+    justify-content: center;
     align-items: center;
     padding: 10px 20px;
   }
 
   .navigation-section {
-    padding: 10px 0;
+    padding: 20px 0;
   }
   .nav-items {
     display: flex;
