--- a/style/main.css
+++ b/style/main.css
@@ -6,54 +6,84 @@
     flex-direction: column;
     gap: 30px;
   }
-.about-section{
+  .about-section {
     padding: 100px 100px 20px 100px;
     font-size: 20px;
     color: white;
-}
-.education-section{
+  }
+  .education-section {
     display: flex;
     flex-direction: column;
     justify-content: center;
     padding-left: 100px;
-
-}
-.about{
+  }
+  .about {
     display: flex;
     gap: 20px;
     margin-bottom: 30px;
-}
-.logo{
+  }
+  .logo {
     width: 50px;
     height: 50px;
     object-fit: contain;
-}
-.klpvm-about{
+  }
+  .klpvm-about {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-}
-.school{
+  }
+  .school {
     color: white;
     font-size: 19px;
     font-weight: 700;
-}
-.learn{
+  }
+  .learn {
     color: white;
-}
+  }
 
-.projects{
+  .projects {
     display: flex;
-    justify-content: center;
+    margin: 40px 100px;
+    padding: 30px;
     gap: 15px;
-}
-.project-photo img{
-    width: 100px;
-    height: 100px;
+    border: 1px solid black;
+    border-radius: 10px;
+    transition: background-color 0.3s;
+  }
+  .projects:hover {
+    box-shadow: 0px 0px 10px 3px rgb(0, 0, 0, 0.4);
+    background-color: #6b796f;
+  }
+  .project-photo img {
+    width: 150px;
+    height: 150px;
     object-fit: cover;
     border-radius: 10px;
-}
-.project-info{
-    background-color: red;
-}
+  }
+  .project-info {
+    width: 450px;
+  }
+  .project-name {
+    font-size: 20px;
+    font-weight: bold;
+    display: flex;
+    gap: 40px;
+  }
+  .project-about {
+    margin: 2px 0 15px 0;
+  }
+  .project-language {
+    display: flex;
+    gap: 10px;
+    flex-wrap: wrap;
+  }
+  .project-language div {
+    background-color: purple;
+    padding: 5px 7px;
+    border: 1px solid black;
+    border-radius: 10px;
+  }
+  .project-language div:hover {
+    box-shadow: 0px 0px 5px 1px rgb(0, 0, 0, 0.4);
+  }
 }
