--- a/style/main.css
+++ b/style/main.css
@@ -67,7 +67,9 @@
     font-size: 20px;
     font-weight: bold;
     display: flex;
-    gap: 40px;
+    justify-content: space-between;
+    margin-right: 100px;
+    /* gap: 40px; */
   }
   .project-about {
     margin: 2px 0 15px 0;
