--- a/style/sidebar.css
+++ b/style/sidebar.css
@@ -61,6 +61,12 @@
     justify-content: center;
     align-items: center;
   }
+.links-items{
+  font-size: 30px;
+  width: 200px;
+  display: flex;
+  justify-content: space-between;
+}
 }
 
 @media (max-width: 939px) {
