--- a/style/main.css
+++ b/style/main.css
@@ -7,30 +7,39 @@
     gap: 30px;
   }
   .about-section {
-    padding: 100px 100px 20px 100px;
+    margin: 100px 100px 0 100px;
+    padding: 30px;
     font-size: 20px;
     color: white;
+    border-radius: 10px;
+    transition: background-color 0.1s;
+  }
+  .about-section:hover {
+    box-shadow: 0px 0px 10px 3px rgb(0, 0, 0, 0.4);
+    background-color: #6b796f;
   }
   .education-section {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding-left: 100px;
+    margin: 0 100px 20px 100px;
+    padding: 30px;
+    border-radius: 10px;
+    transition: background-color 0.1s;
+  }
+  .education-section:hover {
+    box-shadow: 0px 0px 10px 3px rgb(0, 0, 0, 0.4);
+    background-color: #6b796f;
   }
   .about {
     display: flex;
     gap: 20px;
-    margin-bottom: 30px;
+    margin: 15px 0;
   }
   .logo {
     width: 50px;
     height: 50px;
     object-fit: contain;
-  }
-  .klpvm-about {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
   }
   .school {
     color: white;
@@ -41,14 +50,26 @@
     color: white;
   }
 
+  .experience-section{
+    color: white;
+    margin: 0 100px 20px 100px;
+    padding: 30px;
+    font-size: 20px;
+    border-radius: 10px;
+    transition: background-color 0.1s;
+  }
+  .experience-section:hover {
+    box-shadow: 0px 0px 10px 3px rgb(0, 0, 0, 0.4);
+    background-color: #6b796f;
+  }
+
   .projects {
     display: flex;
     margin: 40px 100px;
     padding: 30px;
     gap: 15px;
-    border: 1px solid black;
     border-radius: 10px;
-    transition: background-color 0.3s;
+    transition: background-color 0.1s;
   }
   .projects:hover {
     box-shadow: 0px 0px 10px 3px rgb(0, 0, 0, 0.4);
