--- a/style/sidebar.css
+++ b/style/sidebar.css
@@ -51,6 +51,14 @@
     font-size: 22px;
     margin-bottom: 20px;
   }
+  .nav-items a {
+    text-decoration: none;
+    color: white;
+  }
+  .nav-items a:hover {
+    text-decoration: underline;
+    color: white;
+  }
   .links-section {
     position: absolute;
     bottom: 15px;
@@ -61,12 +69,12 @@
     justify-content: center;
     align-items: center;
   }
-.links-items{
-  font-size: 30px;
-  width: 200px;
-  display: flex;
-  justify-content: space-between;
-}
+  .links-items {
+    font-size: 30px;
+    width: 200px;
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 @media (max-width: 939px) {
