--- a/style/general.css
+++ b/style/general.css
@@ -4,8 +4,10 @@ body * {
     padding: 0;
     vertical-align: top;
     box-sizing: border-box;
+    color: white;
 }
 body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS',
     sans-serif; 
+
 }
