--- a/style/main.css
+++ b/style/main.css
@@ -1,22 +1,24 @@
 @media (min-width: 940px) {
   main {
+   
     padding-left: 560px;
-    background-color: gray;
     display: flex;
     flex-direction: column;
     gap: 30px;
+    background-color: #744D58;
+
   }
   .about-section {
     margin: 100px 100px 0 100px;
     padding: 30px;
     font-size: 20px;
-    color: white;
+    /* color: white; */
     border-radius: 10px;
     transition: background-color 0.1s;
   }
   .about-section:hover {
     box-shadow: 0px 0px 10px 3px rgb(0, 0, 0, 0.4);
-    background-color: #6b796f;
+    background-color: #65404A;
   }
   .education-section {
     display: flex;
@@ -29,7 +31,7 @@
   }
   .education-section:hover {
     box-shadow: 0px 0px 10px 3px rgb(0, 0, 0, 0.4);
-    background-color: #6b796f;
+    background-color: #65404A;
   }
   .about {
     display: flex;
@@ -42,7 +44,7 @@
     object-fit: contain;
   }
   .school {
-    color: white;
+    /* color: white; */
     font-size: 19px;
     font-weight: 700;
   }
@@ -50,19 +52,33 @@
     color: white;
   }
 
-  .experience-section{
-    color: white;
+  .language-section{
+    /* color: white; */
     margin: 0 100px 20px 100px;
     padding: 30px;
     font-size: 20px;
     border-radius: 10px;
     transition: background-color 0.1s;
   }
-  .experience-section:hover {
+  .language-section:hover {
     box-shadow: 0px 0px 10px 3px rgb(0, 0, 0, 0.4);
-    background-color: #6b796f;
+    background-color: #65404A;
   }
 
+.experience{
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+}
+.expertise{
+  margin-bottom: 20px;
+  color: black;
+  font-size: 28px;
+}
+.expertise div{
+  margin-top: 20px;
+  /* color: white; */
+  font-size: 20px;
+}
   .projects {
     display: flex;
     margin: 40px 100px;
@@ -73,7 +89,7 @@
   }
   .projects:hover {
     box-shadow: 0px 0px 10px 3px rgb(0, 0, 0, 0.4);
-    background-color: #6b796f;
+    background-color: #65404A;
   }
   .project-photo img {
     width: 150px;
